--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "typo3/cms-core": "~7.6.0 || ~8.7.0"
+        "php": ">=7.4",
+        "typo3/cms-core": "~9.5.0"
     },
     "suggest": {
-        "sgalinski/sg-cookie-optin": "~2.0.4"
+        "sgalinski/sg-cookie-optin": "~4.4.0"
     },
     "autoload": {
         "psr-4": {
