--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     ],
     "require": {
         "php": ">=7.4",
-        "typo3/cms-core": "~9.5.0"
+        "typo3/cms-core": "~9.5.0 || ~10.4.0"
     },
     "suggest": {
         "sgalinski/sg-cookie-optin": "~4.4.0"
@@ -29,7 +29,7 @@
         }
     },
     "extra": {
-        "typo3/cms": { 
+        "typo3/cms": {
             "extension-key": "rkw_privacy"
         }
     }
